--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="superheroApp">
 <head>
   <meta charset="UTF-8">
   <title>Superhero Phone Book</title>
   <link rel="stylesheet" href="style.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+        <script src="app.js"></script>
 </head>
-<body>
-
-  <script src="app.js"></script>
+<body ng-controller="SuperheroController as vm">
+    <div ng-repeat="hero in vm.heroes  | filter: vm.newSearch()" >
+      <h1>{{hero.name}}</h1>
+    </div>
+  <div>
+    <h1>filter box</h1>
+    <input type="text" placeholder="search" ng-model="vm.newSearchTerm" />
+  </div>
 </body>
 </html>
